--- a/quizme/templates/app/home.html
+++ b/quizme/templates/app/home.html
@@ -18,7 +18,7 @@
                 filter: blur(10x);
                 -webkit-filter: blur(2px);
                 background-color: black;
-            }
+                }
 
             h1 {
                 color: white;
@@ -33,16 +33,15 @@
                 background-color: rgba(0,0,0, .4); 
                 color: black;
                 font-weight: bold;
-                border: 3px solid #f1f1f1;
+                border: .5vw solid #f1f1f1;
                 position: absolute;
-                top: 60%;
+                top: 40%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                width: 1300px;
-                padding: 20px;
-                margin-left: 40px;
+                width: 80vw;
+                padding: 2vw;
                 font-family: 'Helvetica', cursive;
-            }
+                }
 
             .article{
                 background-color: #a6cfff;
@@ -70,9 +69,6 @@
             
             <p>Integer fringilla non neque eget ornare. Sed vel neque id odio mollis accumsan et vitae dui. Nunc eu velit ac nulla dignissim vehicula quis a justo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc porta dolor magna, at malesuada mi ornare et. Aliquam erat volutpat. Aliquam gravida sollicitudin consequat. Sed nec libero nisl. Sed rhoncus odio quis magna molestie, eget laoreet mauris convallis. Nunc non vulputate erat. Donec porta a nulla ut semper. In venenatis aliquet nisi sit amet condimentum. Suspendisse et commodo metus.</p>
             
-            <p>Ut faucibus dui sit amet ultrices varius. Phasellus nec accumsan orci, a blandit est. Nulla id lectus in lorem facilisis viverra. Pellentesque diam ligula, tincidunt vel posuere a, lacinia sed leo. Quisque vehicula ipsum vel sapien dignissim facilisis. Etiam consectetur eu lectus convallis pretium. Aenean quis malesuada elit, ut cursus mi. Cras dapibus nibh id tempor semper. Suspendisse at eros elit. Suspendisse lobortis, urna ac rutrum molestie, quam quam dictum nibh, iaculis congue ipsum diam ac odio.</p>
-            
-            <h4>Lorem ipsum dolor sit amet</h4>
             <p>Duis ac nibh condimentum, laoreet nibh quis, viverra purus. Cras et ligula congue, maximus augue eu, venenatis purus. Donec sagittis sed lorem et aliquam. Aliquam quis velit molestie, suscipit neque eget, mattis lorem. Aenean ultrices lacus turpis, sed lacinia metus ullamcorper in. Curabitur iaculis lectus eget lectus malesuada lobortis vitae eu neque. Phasellus vitae egestas diam. Phasellus venenatis dui arcu, sed sollicitudin erat consequat ac. Cras nibh justo, ornare efficitur quam at, molestie mollis ipsum. Suspendisse hendrerit elementum turpis ut elementum. Morbi maximus nisl at massa mollis, dictum scelerisque leo congue. Vestibulum varius eu purus nec aliquet. Mauris in odio eget velit feugiat pharetra eget at arcu. Mauris euismod dictum orci vel hendrerit. Ut semper ligula nec orci volutpat laoreet.</p>
  
             <a href="{% url 'question' %}">Questions Tab</a>
